--- a/shaish11.html.html
+++ b/shaish11.html.html
@@ -20,8 +20,8 @@
       <td></td>
     </tr>
     <tr>
-      <td><a href="abc">Link to Assignment #2</a></td>
-      <td><a href="abc">Link to Assignment #2 Cloud</a></td>    
+      <td><a href="https://assign2-201109.wm.r.appspot.com/">Link to Assignment #2</a></td>
+      <td><a href="https://assign2-201109.wm.r.appspot.com/api/data">Link to Assignment #2 Cloud</a></td>    
     </tr>
     <tr>
       <td><a href="abc">Link to Assignment #3</a></td>
